--- a/datenschutz.html
+++ b/datenschutz.html
@@ -58,9 +58,9 @@
         <h3>2. Verwendung von Formspree</h3>
         <p>Für das Versenden von Nachrichten über unser Kontaktformular verwenden wir den externen Service <strong>Formspree</strong>. Formspree ist ein Dienst, der es uns ermöglicht, Formulardaten sicher zu versenden.</p>
         <ul>
-          <br><li><strong>Formspree sammelt keine Daten:</strong> <br>Formspree speichert nur die von Ihnen eingegebenen Daten (wie Name, E-Mail-Adresse und Nachricht) und leitet diese an uns weiter.</li>
-          <br><li><strong>Keine Speicherung Ihrer Daten:</strong> <br>Wir speichern keine Daten von Ihnen auf unseren eigenen Servern. Alle Formulardaten werden direkt an uns weitergeleitet, und Formspree speichert diese nur temporär, um die Kommunikation zu ermöglichen.</li>
-          <br><li><strong>Datenweitergabe an Dritte:</strong> <br>Formspree gibt Ihre Daten nicht an Dritte weiter. Ihre Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage genutzt.</li>
+          <br><li>Formspree sammelt keine Daten: Formspree speichert nur die von Ihnen eingegebenen Daten (wie Name, E-Mail-Adresse und Nachricht) und leitet diese an uns weiter.</li>
+          <br><li>Keine Speicherung Ihrer Daten: Wir speichern keine Daten von Ihnen auf unseren eigenen Servern. Alle Formulardaten werden direkt an uns weitergeleitet, und Formspree speichert diese nur temporär, um die Kommunikation zu ermöglichen.</li>
+          <br><li>Datenweitergabe an Dritte: Formspree gibt Ihre Daten nicht an Dritte weiter. Ihre Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage genutzt.</li>
         </ul>
 
         <h3><br>3. Sicherheit Ihrer Daten</h3>
