--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="head" id="top">
   <div class="contain">
     <div class="head__row">
-      <a href="./index.html" class="logo">Gartenbau Z.M.</a>
+      <a href="./index.html" class="logo"">Gartenbau Z.M.</a>
       <div class="header__col">
         <ul class="head__mn-ul">
           <li><a href="./index.html">HOME</a></li>
@@ -42,7 +42,7 @@
 </div>
     <div class="banner">
       <div class="contain">
-        <div class="bg__top-title">Professionelle Gartenbau-Firma</div>
+        <div class="bg__top-title">Professionelle Gartenbau Z.M.-Firma in Remseck am Neckar</div>
       </div>
     </div>
     <main class="main">
@@ -215,7 +215,7 @@
   <div class="contain">
     <div class="footer__top">
       <div class="footer__1">
-        <img src="img/laef.svg">
+        <img src="img/logo.png" width="100" height="100">
         <div class="footer__1-txt">Gartenbau Z.M.</div>
       </div>
       <div class="footer__2">
@@ -242,8 +242,4 @@
 <script src="js/slick.js"></script>  
 <script src="js/common.js"></script>
 </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> 9265026 (initial commit)
