Обновлена Datenschutzerklärung и index c GDPR-дополнениями

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -44,35 +44,34 @@
       <div class="contain">
 <div class="h2">Datenschutz</div>
 
-        <p>Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Sofern auf unseren Seiten personenbezogene Daten (wie Name, E-Mail-Adresse, Telefonnummer) erhoben werden, erfolgt dies auf freiwilliger Basis und nur, wenn Sie uns diese zur Verfügung stellen.</p>
+<p>Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Sofern auf unseren Seiten personenbezogene Daten (wie Name, E-Mail-Adresse, Telefonnummer) erhoben werden, erfolgt dies auf freiwilliger Basis und nur, wenn Sie uns diese zur Verfügung stellen. Der Verantwortliche für die Datenverarbeitung ist im <a href="/impressum">Impressum</a> angegeben.</p>
 
-        <h3>1. Erhebung und Verarbeitung personenbezogener Daten</h3>
-        <p>Im Rahmen unserer Kontaktformulare sammeln wir nur die Daten, die Sie uns freiwillig zur Verfügung stellen. Dies betrifft insbesondere:</p>
-        <ul>
-          <br><li><strong>Name:</strong> Wird benötigt, um Sie korrekt anzusprechen.</li>
-          <br><li><strong>E-Mail-Adresse:</strong> Wird benötigt, um auf Ihre Anfrage zu antworten.</li>
-          <br><li><strong>Nachricht:</strong> Die Nachricht, die Sie an uns senden, enthält die Informationen, die Sie mit uns teilen möchten.</li>
-        </ul>
-        <p>Diese Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage verwendet und nicht für andere Zwecke.</p>
+<h3>1. Erhebung und Verarbeitung personenbezogener Daten</h3>
+<p>Im Rahmen unserer Kontaktformulare sammeln wir nur die Daten, die Sie uns freiwillig zur Verfügung stellen. Dies betrifft insbesondere:</p>
+<ul>
+  <br><li><strong>Name:</strong> Wird benötigt, um Sie korrekt anzusprechen.</li>
+  <br><li><strong>E-Mail-Adresse:</strong> Wird benötigt, um auf Ihre Anfrage zu antworten.</li>
+  <br><li><strong>Nachricht:</strong> Die Nachricht, die Sie an uns senden, enthält die Informationen, die Sie mit uns teilen möchten.</li>
+</ul>
+<p>Diese Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage verwendet und nicht für andere Zwecke. Die Verarbeitung Ihrer Daten erfolgt auf Grundlage Ihrer Einwilligung gemäß Art. 6 Abs. 1 lit. a DSGVO, die Sie durch das Ausfüllen des Kontaktformulars und das Setzen des entsprechenden Häkchens erteilen.</p>
 
-        <h3>2. Verwendung von Formspree</h3>
-        <p>Für das Versenden von Nachrichten über unser Kontaktformular verwenden wir den externen Service <strong>Formspree</strong>. Formspree ist ein Dienst, der es uns ermöglicht, Formulardaten sicher zu versenden.</p>
-        <ul>
-          <br><li>Formspree sammelt keine Daten: Formspree speichert nur die von Ihnen eingegebenen Daten (wie Name, E-Mail-Adresse und Nachricht) und leitet diese an uns weiter.</li>
-          <br><li>Keine Speicherung Ihrer Daten: Wir speichern keine Daten von Ihnen auf unseren eigenen Servern. Alle Formulardaten werden direkt an uns weitergeleitet, und Formspree speichert diese nur temporär, um die Kommunikation zu ermöglichen.</li>
-          <br><li>Datenweitergabe an Dritte: Formspree gibt Ihre Daten nicht an Dritte weiter. Ihre Daten werden ausschließlich zur Bearbeitung Ihrer Anfrage genutzt.</li>
-        </ul>
+<h3>2. Verwendung von Formspree</h3>
+<p>Für das Versenden von Nachrichten über unser Kontaktformular verwenden wir den externen Service <strong>Formspree</strong>. Formspree ist ein Dienst, der es uns ermöglicht, Formulardaten sicher zu versenden.</p>
+<ul>
+  <br><li>Formspree sammelt keine Daten: Formspree speichert nur die von Ihnen eingegebenen Daten (wie Name, E-Mail-Adresse und Nachricht) und leitet diese an uns weiter.</li>
+  <br><li>Keine Speicherung Ihrer Daten auf unseren Servern: Wir speichern Ihre Daten nicht auf unseren eigenen Servern, sondern erhalten sie ausschließlich per E-Mail über Formspree. Diese E-Mails werden nur so lange aufbewahrt, wie es zur Bearbeitung Ihrer Anfrage erforderlich ist, und spätestens nach 12 Monaten gelöscht, sofern keine gesetzliche Aufbewahrungspflicht besteht.</li>
+  <br><li>Datenweitergabe an Dritte: Formspree ist ein in den USA ansässiger Dienst. Die Übermittlung Ihrer Daten in die USA erfolgt auf Grundlage der Standardvertragsklauseln der EU-Kommission, die Formspree verwendet, um ein angemessenes Datenschutzniveau zu gewährleisten. Weitere Informationen finden Sie in der <a href="https://formspree.io/legal/privacy-policy">Datenschutzerklärung von Formspree</a>.</li>
+</ul>
 
-        <h3><br>3. Sicherheit Ihrer Daten</h3>
-        <p>Wir setzen technische und organisatorische Sicherheitsmaßnahmen ein, um Ihre Daten vor Verlust, Missbrauch, unbefugtem Zugriff und Manipulation zu schützen. Unsere Sicherheitsvorkehrungen werden entsprechend der technologischen Entwicklung fortlaufend verbessert.</p>
+<h3><br>3. Sicherheit Ihrer Daten</h3>
+<p>Wir setzen technische und organisatorische Sicherheitsmaßnahmen ein, um Ihre Daten vor Verlust, Missbrauch, unbefugtem Zugriff und Manipulation zu schützen. Unsere Sicherheitsvorkehrungen werden entsprechend der technologischen Entwicklung fortlaufend verbessert.</p>
 
-        <h3>4. Rechte der betroffenen Person</h3>
-        <p>Sie haben das Recht, jederzeit Auskunft über die von uns gespeicherten personenbezogenen Daten zu erhalten. Darüber hinaus haben Sie das Recht auf Berichtigung, Löschung oder Einschränkung der Verarbeitung Ihrer personenbezogenen Daten.</p>
+<h3>4. Rechte der betroffenen Person</h3>
+<p>Sie haben das Recht, jederzeit Auskunft über die von uns gespeicherten personenbezogenen Daten zu erhalten. Darüber hinaus haben Sie das Recht auf Berichtigung, Löschung oder Einschränkung der Verarbeitung Ihrer personenbezogenen Daten. Sie haben das Recht, Ihre Einwilligung zur Verarbeitung Ihrer Daten jederzeit zu widerrufen, indem Sie uns über die im <a href="/impressum">Impressum</a> angegebenen Kontaktdaten kontaktieren. Ein Widerruf hat keinen Einfluss auf die Rechtmäßigkeit der bis zum Widerruf erfolgten Datenverarbeitung.</p>
+<p>Sie haben das Recht, sich bei einer Datenschutzbehörde zu beschweren, wenn Sie der Ansicht sind, dass die Verarbeitung Ihrer Daten gegen die DSGVO verstößt. Zuständig ist die Datenschutzbehörde Ihres Wohnsitzes.</p>
 
-        <h3>5. Änderungen dieser Datenschutzerklärung</h3>
-        <p>Wir behalten uns vor, diese Datenschutzerklärung zu ändern, um sie an gesetzliche Änderungen oder Änderungen unserer Leistungen anzupassen. Bitte überprüfen Sie diese Seite regelmäßig, um über die aktuelle Datenschutzerklärung informiert zu bleiben.</p>
-        
-      </div>
+<h3>5. Änderungen dieser Datenschutzerklärung</h3>
+<p>Wir behalten uns vor, diese Datenschutzerklärung zu ändern, um sie an gesetzliche Änderungen oder Änderungen unserer Leistungen anzupassen. Bitte überprüfen Sie diese Seite regelmäßig, um über die aktuelle Datenschutzerklärung informiert zu bleiben.</p>
     </main>
     <div class="footer">
   <div class="contain">
