--- a/index.html
+++ b/index.html
@@ -203,6 +203,14 @@
             <!-- Скрытое поле для темы письма -->
             <input type="hidden" name="_subject" id="email-subject" value="EMail von gartenbauzm.de">
 
+            <!-- Чекбокс согласия GDPR -->
+            <div class="sform__consent">
+              <label>
+                <input type="checkbox" name="consent" required>
+                Ich stimme der Verarbeitung meiner Daten gemäß der <a href="/datenschutz" target="_blank">Datenschutzerklärung</a> zu.
+              </label>
+            </div>
+
             <button type="submit" class="btn">Senden</button>
           </form>
         </div>
