не большие изменеия в наполнении сайта, только текст

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                 <span style="color:white !important;text-shadow:0 4px 20px rgba(0,0,0,1),0 2px 4px rgba(0,0,0,1),2px 2px 8px rgba(0,0,0,1) !important;-webkit-text-fill-color:white !important;background:none !important;">Stuttgart & Region</span>
               </h1>
               <p class="hero-subtitle">
-                Von kreativer Gartengestaltung bis zu hochwertigen Natursteinarbeiten – wir verwirklichen Ihre grünen Träume mit über 15 Jahren Erfahrung
+                Von kreativer Gartengestaltung bis zu hochwertigen Natursteinarbeiten – wir verwirklichen Ihre grünen Träume
               </p>
               <div class="hero-actions">
                 <a href="tel:+491782747470" class="hero-cta primary">
@@ -659,7 +659,7 @@
                 </a>
                 <a href="#Kontakt" class="hero-cta secondary">
                   <span class="cta-icon">💬</span>
-                  <span class="cta-title">Kostenlose Beratung</span>
+                  <span class="cta-title">Beratung</span>
                 </a>
               </div>
             </div>
@@ -689,7 +689,7 @@
                 </div>
                 <div class="feature-item">
                   <span class="feature-icon">✓</span>
-                  <span class="feature-text">Meisterbetrieb</span>
+                  <span class="feature-text">Professionel</span>
                 </div>
               </div>
               <div class="hero-actions">
@@ -735,11 +735,6 @@
                 <div class="benefit-item">
                   <span class="benefit-number">100%</span>
                   <span class="benefit-text">Zufriedenheit</span>
-                </div>
-                <div class="benefit-item">
-                  <span class="benefit-number">0€</span>
-                  <span class="benefit-text">Beratung</span>
-                </div>
               </div>
               <div class="hero-actions">
                 <a href="https://wa.me/+491782747470" class="hero-cta primary whatsapp">
@@ -791,7 +786,7 @@
           <div class="about-grid">
             <div class="about-content">
               <p>Von kreativer Gartengestaltung bis zu hochwertigen Natursteinarbeiten – wir verwirklichen Ihre Träume mit langjähriger Erfahrung und Leidenschaft in der Region Stuttgart.</p>
-              <p><strong>Kostenlose Beratung vor Ort</strong> in Kornwestheim, Fellbach, Esslingen und der gesamten Region Stuttgart.</p>
+              <p><strong>Beratung vor Ort</strong> in Kornwestheim, Fellbach, Esslingen und der gesamten Region Stuttgart.</p>
               <div class="about-cta">
                 <a href="#Kontakt" class="btn btn-primary">🏡 Jetzt Beratung anfragen</a>
               </div>
@@ -1126,7 +1121,7 @@
                   </div>
                   <div class="btn-text-container">
                     <span class="btn-primary-text">Nachricht senden</span>
-                    <span class="btn-secondary-text">Kostenlose Beratung</span>
+                    <span class="btn-secondary-text">Beratung</span>
                   </div>
                   <div class="btn-arrow">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -1219,7 +1214,7 @@
               <div class="form-card">
                 <div class="form-header-new">
                   <h3>Projekt anfragen</h3>
-                  <p>Kostenlose Beratung in 24h</p>
+                  <p>Beratung in 24h</p>
                 </div>
         
                 <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xoqznyqb" method="post" class="modern-form">
@@ -1254,7 +1249,7 @@
                   </div>
                   
                   <button type="submit" class="submit-btn-new">
-                    <span class="btn-text">Kostenlose Beratung anfordern</span>
+                    <span class="btn-text">Beratung anfordern</span>
                     <span class="btn-arrow">→</span>
                   </button>
                 </form>
